# panic-at-the-rust-code

./: Cargo.toml  PROPOSAL.md  README.md  specs.md
config/: bindings.ron
panic_at_the_rust_code/: Cargo.toml
resources/sprites/: Ferris.ron  Ferris_blue.ron  lose.ron  platform_blue.ron  text.ron
src/: main.rs  state.rs
src/systems/: crab.rs  jump.rs  krab.rs  menu_text.rs  mod.rs  move_crab.rs
