[package]
name = "crabby-jump"
version = "0.1.0"
authors = ["mvj23", "bmallon99"]
edition = "2018"

[dependencies]
amethyst = "0.13.0"
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
